<<<<<<< Updated upstream
[gd_scene load_steps=9 format=3 uid="uid://cnxfnw4ffj33s"]
=======
[gd_scene load_steps=14 format=3 uid="uid://cnxfnw4ffj33s"]
>>>>>>> Stashed changes

[ext_resource type="Script" path="res://scripts/title_menu.gd" id="1_gnegl"]
[ext_resource type="Theme" uid="uid://c1smofwrfjxpt" path="res://UI/default_UI.tres" id="2_7qmhy"]
[ext_resource type="FontFile" uid="uid://dks3mplpwqwc5" path="res://Fonts/ChardinDoihleExpanded-1GW8v.ttf" id="3_vw8a0"]
[ext_resource type="FontFile" uid="uid://b7osbfk2po1xx" path="res://Fonts/ChardinDoihle-8Mpwn.ttf" id="4_a7vwk"]
[ext_resource type="Texture2D" path="res://UI/banner.png" id="5_0pmu0"]
[ext_resource type="Script" path="res://scripts/volume.gd" id="5_ircyo"]
<<<<<<< Updated upstream
[ext_resource type="AudioStream" path="res://SFX/volume.mp3" id="6_i2wqo"]
=======
[ext_resource type="FontFile" uid="uid://dewdp38evbxog" path="res://Fonts/BebasNeue-Regular.ttf" id="6_gkot0"]
[ext_resource type="AudioStream" uid="uid://ofhlh3wruqrr" path="res://SFX/volume.mp3" id="6_i2wqo"]
[ext_resource type="Texture2D" uid="uid://c3012ftqbv0ip" path="res://UI/fr.png" id="7_y2r8q"]
[ext_resource type="Texture2D" uid="uid://byfy3ajqq2nfd" path="res://UI/gb.png" id="8_gq1f3"]
>>>>>>> Stashed changes

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k7pn3"]
bg_color = Color(0.882353, 0.458824, 0.266667, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0.8, 0.392157, 0.2, 1)
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o02me"]
bg_color = Color(0, 0, 0, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xwe8m"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.63825, 0.90158, 1, 0.392157)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_puy84"]
size = Vector2(60, 45)

[node name="title_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gnegl")

[node name="Background_ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(500, 500)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.0784314, 0.156863, 1)

[node name="Banner" type="Sprite2D" parent="."]
position = Vector2(563, 91.75)
scale = Vector2(1.00651, 0.481156)
texture = ExtResource("5_0pmu0")
region_enabled = true
region_rect = Rect2(0, 72.4475, 1152, 398.738)

[node name="pauseScreen" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -678.0
offset_top = -120.0
offset_right = -119.0
offset_bottom = 314.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(223, 234)

[node name="pauseContainer" type="VBoxContainer" parent="pauseScreen"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 20

[node name="play" type="Button" parent="pauseScreen/pauseContainer"]
layout_mode = 2
theme = ExtResource("2_7qmhy")
theme_override_font_sizes/font_size = 72
text = "Play"

[node name="settings" type="Button" parent="pauseScreen/pauseContainer"]
layout_mode = 2
theme = ExtResource("2_7qmhy")
theme_override_font_sizes/font_size = 36
text = "Settings"

[node name="exit" type="Button" parent="pauseScreen/pauseContainer"]
layout_mode = 2
theme = ExtResource("2_7qmhy")
theme_override_font_sizes/font_size = 36
text = "Exit"

[node name="settingsScreen" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.5
offset_top = -263.0
offset_right = 254.5
offset_bottom = 263.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(223, 234)

[node name="Panel" type="Panel" parent="settingsScreen"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("2_7qmhy")

[node name="default" type="VBoxContainer" parent="settingsScreen"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 20

[node name="screenTitle" type="Label" parent="settingsScreen/default"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_p2srl")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_k7pn3")
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Language" type="Button" parent="settingsScreen/default"]
layout_mode = 2
theme = ExtResource("2_7qmhy")
theme_override_font_sizes/font_size = 72
text = "Language"

[node name="Volume" type="Button" parent="settingsScreen/default"]
layout_mode = 2
theme = ExtResource("2_7qmhy")
theme_override_font_sizes/font_size = 72
text = "Volume"

[node name="Back" type="Button" parent="settingsScreen/default"]
layout_mode = 2
theme = ExtResource("2_7qmhy")
theme_override_font_sizes/font_size = 36
text = "Back"

[node name="volume" type="VBoxContainer" parent="settingsScreen"]
visible = false
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="settingsScreen/volume"]
layout_mode = 2
<<<<<<< Updated upstream
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_vw8a0")
=======
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_p2srl")
>>>>>>> Stashed changes
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_k7pn3")
text = "Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="settingsScreen/volume"]
layout_mode = 2

[node name="VolumePercentageLabel" type="Label" parent="settingsScreen/volume/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_7qmhy")
theme_override_font_sizes/font_size = 16
text = "Main : "

[node name="HSlider" type="HSlider" parent="settingsScreen/volume/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("2_7qmhy")
value = 100.0
script = ExtResource("5_ircyo")
bus_name = "Master"

[node name="HBoxContainer2" type="HBoxContainer" parent="settingsScreen/volume"]
layout_mode = 2

[node name="SFX" type="Label" parent="settingsScreen/volume/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_7qmhy")
theme_override_font_sizes/font_size = 16
text = "SFX : "

[node name="HSlider" type="HSlider" parent="settingsScreen/volume/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("2_7qmhy")
value = 31.0
script = ExtResource("5_ircyo")
bus_name = "SFX"

[node name="HBoxContainer3" type="HBoxContainer" parent="settingsScreen/volume"]
layout_mode = 2

[node name="Music" type="Label" parent="settingsScreen/volume/HBoxContainer3"]
layout_mode = 2
theme = ExtResource("2_7qmhy")
theme_override_font_sizes/font_size = 16
text = "Music :"

[node name="HSlider" type="HSlider" parent="settingsScreen/volume/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("2_7qmhy")
script = ExtResource("5_ircyo")
bus_name = "Music"

[node name="HBoxContainer4" type="HBoxContainer" parent="settingsScreen/volume"]
layout_mode = 2

[node name="Voices" type="Label" parent="settingsScreen/volume/HBoxContainer4"]
layout_mode = 2
theme = ExtResource("2_7qmhy")
<<<<<<< Updated upstream
theme_override_font_sizes/font_size = 16
text = "Dogs : "
=======
theme_override_font_sizes/font_size = 32
text = "Voices :"
>>>>>>> Stashed changes

[node name="HSlider" type="HSlider" parent="settingsScreen/volume/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("2_7qmhy")
value = 68.0
script = ExtResource("5_ircyo")
bus_name = "Voices"

[node name="Back" type="Button" parent="settingsScreen/volume"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_7qmhy")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("4_a7vwk")
theme_override_font_sizes/font_size = 32
text = "Back to Menu"

[node name="Language" type="VBoxContainer" parent="settingsScreen"]
visible = false
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="settingsScreen/Language"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_p2srl")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_k7pn3")
text = "Language"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Voices" type="Label" parent="settingsScreen/Language"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("6_gkot0")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_o02me")
text = "Voice"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="settingsScreen/Language"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="settingsScreen/Language/HBoxContainer"]
layout_mode = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="settingsScreen/Language/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="fr" type="Button" parent="settingsScreen/Language/HBoxContainer/VBoxContainer/AspectRatioContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_xwe8m")
theme_override_styles/hover = SubResource("StyleBoxFlat_xwe8m")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xwe8m")
icon = ExtResource("7_y2r8q")

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="settingsScreen/Language/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="settingsScreen/Language/HBoxContainer/VBoxContainer/AspectRatioContainer2"]
layout_mode = 2
theme = ExtResource("2_7qmhy")
theme_override_font_sizes/font_size = 25
text = "Baguette🥖"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="settingsScreen/Language/HBoxContainer"]
layout_mode = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="settingsScreen/Language/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="en" type="Button" parent="settingsScreen/Language/HBoxContainer/VBoxContainer2/AspectRatioContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_xwe8m")
theme_override_styles/hover = SubResource("StyleBoxFlat_xwe8m")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xwe8m")
icon = ExtResource("8_gq1f3")

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="settingsScreen/Language/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="settingsScreen/Language/HBoxContainer/VBoxContainer2/AspectRatioContainer2"]
layout_mode = 2
theme = ExtResource("2_7qmhy")
theme_override_font_sizes/font_size = 25
text = "Rossbeef🍖"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="settingsScreen/Language/HBoxContainer"]
layout_mode = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="settingsScreen/Language/HBoxContainer/VBoxContainer3"]
layout_mode = 2

[node name="none" type="Button" parent="settingsScreen/Language/HBoxContainer/VBoxContainer3/AspectRatioContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_xwe8m")
theme_override_styles/hover = SubResource("StyleBoxFlat_xwe8m")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xwe8m")
icon = SubResource("PlaceholderTexture2D_puy84")

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="settingsScreen/Language/HBoxContainer/VBoxContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="settingsScreen/Language/HBoxContainer/VBoxContainer3/AspectRatioContainer2"]
layout_mode = 2
theme = ExtResource("2_7qmhy")
theme_override_font_sizes/font_size = 25
text = "    None🤫    "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Texts" type="Label" parent="settingsScreen/Language"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("6_gkot0")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_o02me")
text = "text"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="settingsScreen/Language"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="settingsScreen/Language/HBoxContainer2"]
layout_mode = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="settingsScreen/Language/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="fr" type="Button" parent="settingsScreen/Language/HBoxContainer2/VBoxContainer/AspectRatioContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_xwe8m")
theme_override_styles/hover = SubResource("StyleBoxFlat_xwe8m")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xwe8m")
icon = ExtResource("7_y2r8q")

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="settingsScreen/Language/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="settingsScreen/Language/HBoxContainer2/VBoxContainer/AspectRatioContainer2"]
layout_mode = 2
theme = ExtResource("2_7qmhy")
theme_override_font_sizes/font_size = 25
text = "Baguette🥖"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="settingsScreen/Language/HBoxContainer2"]
layout_mode = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="settingsScreen/Language/HBoxContainer2/VBoxContainer2"]
layout_mode = 2

[node name="en" type="Button" parent="settingsScreen/Language/HBoxContainer2/VBoxContainer2/AspectRatioContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_xwe8m")
theme_override_styles/hover = SubResource("StyleBoxFlat_xwe8m")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xwe8m")
icon = ExtResource("8_gq1f3")

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="settingsScreen/Language/HBoxContainer2/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="settingsScreen/Language/HBoxContainer2/VBoxContainer2/AspectRatioContainer2"]
layout_mode = 2
theme = ExtResource("2_7qmhy")
theme_override_font_sizes/font_size = 25
text = "Rossbeef🍖"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="settingsScreen/Language"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_7qmhy")
theme_override_font_sizes/font_size = 32
text = "Back to Menu"

[node name="SFXPreview" type="AudioStreamPlayer" parent="settingsScreen"]
stream = ExtResource("6_i2wqo")

[node name="MasterPreview" type="AudioStreamPlayer" parent="settingsScreen"]
stream = ExtResource("6_i2wqo")
bus = &"SFX"

[node name="MusicPreview" type="AudioStreamPlayer" parent="settingsScreen"]
stream = ExtResource("6_i2wqo")
bus = &"Music"

[node name="VoicePreview" type="AudioStreamPlayer" parent="settingsScreen"]
stream = ExtResource("6_i2wqo")
bus = &"Voice"

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_i2wqo")

[connection signal="pressed" from="pauseScreen/pauseContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="pauseScreen/pauseContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="pauseScreen/pauseContainer/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="settingsScreen/default/Language" to="." method="_on_language_pressed"]
[connection signal="pressed" from="settingsScreen/default/Volume" to="." method="_on_volume_pressed"]
[connection signal="pressed" from="settingsScreen/default/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="settingsScreen/volume/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="settingsScreen/Language/HBoxContainer/VBoxContainer/AspectRatioContainer/fr" to="." method="_on_fr_pressed"]
[connection signal="pressed" from="settingsScreen/Language/HBoxContainer/VBoxContainer2/AspectRatioContainer/en" to="." method="_on_en_pressed"]
[connection signal="pressed" from="settingsScreen/Language/HBoxContainer/VBoxContainer3/AspectRatioContainer/none" to="." method="_on_none_pressed"]
[connection signal="pressed" from="settingsScreen/Language/HBoxContainer2/VBoxContainer/AspectRatioContainer/fr" to="." method="_on_fr_pressed"]
[connection signal="pressed" from="settingsScreen/Language/HBoxContainer2/VBoxContainer2/AspectRatioContainer/en" to="." method="_on_en_pressed"]
[connection signal="pressed" from="settingsScreen/Language/Back" to="." method="_on_back_pressed"]
